# mypy-issues

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: check_pr.yaml  close_old_issues.yaml  download_issues.yaml  lint.yaml  sync-issues.yaml  sync_issues.yaml
src/mypy_issues/: __init__.py  apply.py  config.py  diff.py  issues.py
